# llm_tower_of_haoi

./: .gitignore  8disks_result.txt  README.md  blog.md  pyproject.toml  requirements.txt
llm_reasoning/: __main__.py  core.py  models.py  signatures.py
llm_reasoning/tasks/: tower_of_hanoi.py
