[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_reasoning"
version = "0.1.0"
description = "Generalized LLM-guided search framework"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dspy",
    "openai",
    "click"
]

[tool.setuptools.packages.find]
where = ["llm_reasoning"] 